--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "yalo-metrics",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "description": "Metric reporter tools",
     "license": "MIT",
     "repository": {
@@ -23,6 +23,11 @@
         "find-package-json": "^1.2.0"
     },
     "devDependencies": {
+        "eslint": "^7.32.0",
+        "eslint-config-standard": "^16.0.3",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^5.1.1",
         "nodemon": "^2.0.3"
     }
 }
