--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node src/index.js",
-        "dev": "nodemon src/index.js"
+        "dev": "nodemon src/index.js",
+        "lint": "eslint .",
+        "lint-fix": "eslint . --fix"
     },
     "author": "Fernando Serrano",
     "dependencies": {
