bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,6 +8,7 @@ definitions:
           - node
         script:
           - export NODE_ENV=ci
+          - npm install
           - npm run lint
 pipelines:
   default:
