Add support for types

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "metrics",
         "datadog"
     ],
+    "types": "src/index.d.ts",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node src/index.js",
